<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailItems.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints"
        android:id="@+id/appbar"
        app:layout_constraintBottom_toTopOf="@id/view_pager">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DetailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tv_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:src="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingEnd="150dp"
                android:textColor="@color/title_color"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="@string/full_name"
                app:layout_constraintStart_toEndOf="@+id/tv_image"
                tools:ignore="RtlSymmetry"
                tools:layout_editor_absoluteY="4dp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_fullName"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/tv_image"
                android:text="@string/location"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:paddingEnd="150dp"
                app:layout_constraintStart_toEndOf="@+id/tv_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_fullName"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/Website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/tv_image"
                android:paddingEnd="160dp"
                android:text="@string/blog_and_website"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/tv_image"
                app:layout_constraintTop_toBottomOf="@+id/location"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@color/title_color" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

</androidx.constraintlayout.widget.ConstraintLayout>